--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
 </androidx.constraintlayout.widget.ConstraintLayout>
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
+        android:id="@+id/nview"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/menu" />
